Update data structures for enhanced usability and consistency
- Updated `Stack` and `SimpleStack` to return `null` instead of exceptions for empty stack operations.
- Modified `SimpleQueue` to use `queue.getFirst()` for improved clarity and performance.
- Enhanced `MaxMinQueue` documentation and refactored `peekTop` to align with its description.
- Added nearest-neighbour search functionality to `KdTree` with optimised recursive traversal.
- Refactored k-d tree partitioning logic for simplicity and efficiency.
- Introduced new helper methods for common operations like distance calculations and list partitioning.